@@ -16,6 +16,7 @@ xine-lib (1.1.3)
   * Mark Polypaudio audio plugin as deprecated, as upstream changed APIs at
     least two times in the mean time.
   * Allow 0 for DVD title/chapter (navigation or full title).
+  * New experimental JACK audio driver.
 	
 xine-lib (1.1.2)
   * Security fixes:
